# dns-server

./: Cargo.toml
client/: Cargo.toml
client/src/: formatters.rs  main.rs
dns-types/: Cargo.toml
dns-types/src/: enums.rs  lib.rs  structs.rs
dns-types/src/parser/: implementation.rs  traits.rs
dns-types/src/parser/tests/: domain.rs  enums.rs  header.rs  many_pointers.rs  messages.rs  questions.rs  records.rs
dns-types/src/parser2/: implementation.rs  mod.rs  traits.rs
dns-types/src/serializer/: implementation.rs  mod.rs  traits.rs
dns-types/src/serializer/tests/: domain.rs  header.rs  message.rs  mod.rs  question.rs  record.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
src/parser/: enums.rs  implementation.rs  mod.rs  parsers.rs  structs.rs  tests.rs  traits.rs
src/parser/tests/: domain.rs  enums.rs  header.rs  many_pointers.rs  messages.rs  mod.rs  questions.rs  records.rs
src/serializer/: implementation.rs  traits.rs
src/serializer/tests/: domain.rs  header.rs  message.rs  mod.rs  question.rs  record.rs
src/types/: structs.rs
utils/: Cargo.toml
utils/src/: lib.rs
