[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
atty = "0.2.14"
bytes = "1.6.0"
clap = { version = "4.5.7", features = ["derive"] }
types = { path = "../dns-types",package = "dns-types"}
