[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
rustls = "0.23.10"
types = { version = "0.1.0", path = "../dns-types", package = "dns-types"}
webpki = "0.22.4"
webpki-roots = "0.26.3"
